<resources>
    <string name="app_name">BackFour User</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="err_msg_email">Enter Valid Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Don\'t have an account ? | Sign Up</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_notice">Already Have an account? | Log In</string>
    <string name="reg_hint">Register with <b>BACKFOUR</b></string>
    <string name="welcome_hint">Welcome to <b>BACKFOUR</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
