<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".ui.activities.register.RegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content"
                android:src="@drawable/top"/>


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:src="@drawable/logo_back_four"/>
            <TextView
                android:id="@+id/reg_dummy_text"
                android:layout_below="@+id/header_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/reg_hint"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_dummy_text"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="4dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/username"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:digits="0123456789"
                    android:hint="Mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile_layout"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="4dp"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/password_layout"
                android:layout_marginStart="72dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:text="@string/register"
                android:textColor="@color/dark_orange"
                android:textStyle="bold" />


            <View
                android:id="@+id/yellow_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/register_button"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@color/ochre_yellow" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/yellow_line"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/login_notice"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>