<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".ui.activities.login.LoginActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/header_image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content"
                android:src="@drawable/top"/>


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:src="@drawable/logo_back_four"/>

            <TextView
                android:id="@+id/welcome_dummy_text"
                android:layout_below="@+id/header_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:text="@string/welcome_hint"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_below="@+id/welcome_dummy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="36dp"
                android:textColorHint="@android:color/white"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:targetApi="lollipop" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/password_layout"
                android:layout_marginStart="72dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="72dp"
                android:background="@android:color/white"
                android:text="@string/login"
                android:textColor="@color/dark_orange"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/alternate_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password"
                android:layout_marginTop="48dp"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:weightSum="3">

                <View
                    android:id="@+id/view_one"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/connect_with"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Or Login Using"
                    android:padding="2dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_two"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/social_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alternate_options"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_buttondummy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1" />

                <!--
                                <com.facebook.login.widget.LoginButton
                                    android:id="@+id/fb_login"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8dp"
                                    android:layout_weight="1"
                                    android:paddingTop="16dp"
                                    android:paddingBottom="12dp" />-->

            </LinearLayout>

            <View
                android:id="@+id/yellow_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/social_layout"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@color/ochre_yellow" />

            <TextView
                android:id="@+id/register_now"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/yellow_line"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/register_now"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>